[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sepaudio"
version = "0.1.0"
description = "downloads, separates, and enhances dialogue from audio/video"
readme = "README.md"
requires-python = ">=3.11" # Based on dependencies like SpeechBrain and PyTorch
license = { text = "Apache-2.0" }
authors = [
    { name = "Fred Bliss"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Utilities",
]

dependencies = [
    "librosa",
    "soundfile",
    "yt-dlp",
    "audio-separator",
    "moviepy",
    "speechbrain",
    "torch",
    "torchaudio",     
    "numpy>=1.21",
    "tqdm",
]

[project.scripts]
sepaudio = "cli:main" # Expects cli.py at top level

[project.urls]
homepage = "https://github.com/fblissjr/sepaudio"
repository = "https://github.com/fblissjr/sepaudio"

# --- Hatch Configuration ---
[tool.hatch.build.targets.wheel]
# This tells Hatch to find a package directory named 'sepaudio_lib' inside 'src/'
# and package it as 'sepaudio_lib'.
packages = ["src/sepaudio_lib"]

# This explicitly copies src/cli.py to the root of the wheel as cli.py,
# making `import cli` and the script entry `cli:main` work.
[tool.hatch.build.targets.wheel.force-include]
"src/cli.py" = "cli.py"


# --- Ruff Configuration ---
[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [ ".venv", "__pypackages__", "build", "dist", ".ruff_cache" ]
[tool.ruff.lint]
select = [ "E", "W", "F", "I", "UP", "B", "T20", "RUF", "ANN" ]
ignore = ["ANN101", "ANN102", "ANN401"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"